apps/base/swpt-creditors/hydra-db/postgres/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-hydra-db
  labels:
    app.kubernetes.io/name: hydra-db
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hydra-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: hydra-db
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: postgres-operator
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: monitoring
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values: ["prometheus"]

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hydra-db-users
  labels:
    app.kubernetes.io/name: hydra-db
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hydra-db
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 5432
    from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: hydra
          app.kubernetes.io/instance: swpt
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: hydra-janitor
          app.kubernetes.io/instance: swpt
          app.kubernetes.io/component: janitor
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: hydra-automigrate
          app.kubernetes.io/instance: swpt
